# Eye-Renderer

./: AABB.cpp  AABB.h  CMakeLists.txt  Camera.cpp  Camera.h  Dielectric.cpp  Dielectric.h  HittableList.cpp  HittableList.h  IHittable.cpp  IHittable.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metal.cpp  Metal.h  Perlin.cpp  Perlin.h  README.md  RawStbImage.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Utility.cpp  Utility.h  main.cpp  stdafx.h
Hittable/: AARect.cpp  AARect.h  BVHNode.cpp  BVHNode.h  Box.cpp  Box.h  HittableList.cpp  HittableList.h  IHittable.cpp  IHittable.h  MovingSphere.cpp  MovingSphere.h  Sphere.cpp  Sphere.h  Translate.cpp  Translate.h
Material/: Dielectric.cpp  DiffuseLight.cpp  DiffuseLight.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metal.cpp  Metal.h
Textures/: ImageTexture.cpp  ImageTexture.h  NoiseTexture.cpp  NoiseTexture.h  Texture.cpp  Texture.h
